--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "gulp-uglify": "^1.5.1"
   },
   "dependencies": {
+    "autoprefixer": "^6.5.3",
     "browser-sync": "^2.17.5",
+    "gulp-postcss": "^6.2.0",
     "static-server": "^2.0.0"
   }
 }
